# Chip-Simulation-Suite

./: .gitignore  README.md  pyproject.toml  setup_venv.sh
comsol_suite/: __init__.py  __main__.py  config.py  jobs.py  runner.py  server.py
comsol_suite/tools/: __init__.py  cad.py  circuit_physics.py  comsol.py  design_params.py  fitting.py  qleap.py  qleap_cct001.py  qleap_nt2.py
config/: paths.example.toml
docs/: ARCHITECTURE.md  INSTALL.md  PIPELINE.md  TOOLS.md
scripts/: build_D0_capext.py  build_resonator_halfwave.py  cad_resonator_halfwave.py  checker_D0_capext.py  checker_template.py  decay_rate_sweep.py  eigenfreq_with_fields.py  eigenfrequency_analysis.py  geometry_param_sweep.py  run_model_java.py
scripts/analysis/: plot_results.py
skills/comsol-eigenfrequency/: SKILL.md
stack/: README.md  WALKTHROUGH.md
stack/device_templates/: coupler.yaml  resonator.yaml  transmon.yaml  twpa.yaml
stack/prompts/: automated_grid_search.md  cad_conversation.md  design_intake.md  material_selection.md  result_interpretation.md  session_start.md  study_selection.md
tests/: test_cad_end_to_end.py  test_circuit_physics.py  test_comsol_dryrun.py  test_d0_postprocessing.py  test_design_params.py  test_eigenfrequency_dryrun.py  test_fitting_end_to_end.py  test_new_tools_dryrun.py  test_qleap_cct001.py  test_qleap_nt2.py  test_qleap_nt2_campaign.py  test_server_smoke.py  test_validate_geometry_dryrun.py
